# teensy4-rs-template

./: Cargo.toml  build.rs  flash.sh  memory.x
.cargo/: config.toml
board/: Cargo.toml  build.rs
board/src/: imxrt1010evk.rs  lib.rs  ral_shim.rs
board/src/imxrt10xx/: clock.rs  clock_tree.rs
board/src/imxrt11xx/: clock_tree.rs
logging/: Cargo.toml
src/: fcb.rs  main.rs
