[package]
name = "rt1010-rs-blinky"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["board"]

[workspace.dependencies]
imxrt-dma = "0.1"
imxrt-iomuxc = "0.3.0"
imxrt-hal = { git = "https://github.com/imxrt-rs/imxrt-hal", rev="aa57636"}
imxrt-ral = "0.6"
imxrt-rt = "0.1.5"
imxrt-usbd = "0.3"
defmt = "0.3"

[workspace.package]
repository = "https://github.com/imxrt-rs/imxrt-hal"
keywords = ["imxrt", "nxp", "embedded", "no_std", "embedded-hal"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
imxrt-rt = { workspace = true }
menu = "0.3.2"
rtic = { version = "2.0", features = ["thumbv7-backend"] }
log = "0.4"
pin-utils = "0.1"
usb-device = { version = "0.3", features = ["test-class-high-speed"] }
usbd-serial = "0.2"
usbd-hid = "0.8"
board = {version = "*", path = "board", features = ["imxrt1010evk"]}
panic-halt = "*"

[[bin]]
name = "rt1010-rs-blinky"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[patch.crates-io.imxrt-ral]
git = "https://github.com/imxrt-rs/imxrt-ral"

[patch.crates-io.imxrt-iomuxc]
git = "https://github.com/imxrt-rs/imxrt-iomuxc"