[package]
name = "rt1010-rs-blinky"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["board"]

[workspace.package]
repository = "https://github.com/imxrt-rs/imxrt-hal"
keywords = ["imxrt", "nxp", "embedded", "no_std", "embedded-hal"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
imxrt-rt = "0.1.5"
board = {version = "*", path = "board"}
panic-halt = "*"

[build-dependencies.imxrt-rt]
version = "0.1.5"

[[bin]]
name = "rt1010-rs-blinky"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[patch.crates-io.imxrt-ral]
git = "https://github.com/imxrt-rs/imxrt-ral"

[patch.crates-io.imxrt-iomuxc]
git = "https://github.com/imxrt-rs/imxrt-iomuxc"