[package]
name = "board"
version = "0.1.0"
edition = { workspace = true }
# Only for testing, documentation.
publish = false

[dependencies.imxrt-hal]
workspace = true

[dependencies.imxrt-iomuxc]
workspace = true

[dependencies.imxrt-ral]
workspace = true

[dependencies.imxrt-rt]
workspace = true

[build-dependencies.imxrt-rt]
workspace = true

[dependencies.cortex-m]
version = "0.7"
features = ["critical-section-single-core"]

# Other boards may choose to define their FCB inline.
[dependencies.imxrt-boot-gen]
optional = true
version = "0.2"

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies.imxrt1010evk-fcb]
version = "0.1"
optional = true

[features]
imxrt1010evk = [
    "imxrt-iomuxc/imxrt1010",
    "imxrt-ral/imxrt1011",
    "imxrt-hal/imxrt1010",
    "imxrt1010evk-fcb",
]