[package]
name = "board"
version = "0.1.0"
edition = { workspace = true }
# Only for testing, documentation.
publish = false

[dependencies.imxrt-hal]
workspace = true
features = ["imxrt1010"]

[dependencies.imxrt-iomuxc]
workspace = true
features = ["imxrt1010"]

[dependencies.imxrt-ral]
workspace = true
features = ["imxrt1011"]

[dependencies.imxrt-rt]
workspace = true

[build-dependencies.imxrt-rt]
workspace = true

[dependencies.cortex-m]
version = "0.7"
features = ["critical-section-single-core"]

[dependencies.imxrt1010evk-fcb]
version = "0.1"