[package]
name = "board"
version = "0.1.0"
edition = { workspace = true }
# Only for testing, documentation.
publish = false

[dependencies.imxrt-hal]
git = "https://github.com/imxrt-rs/imxrt-hal"
rev="aa57636"
features = ["imxrt1010"]

[dependencies.imxrt-iomuxc]
version = "0.3.0"
features = ["imxrt1010"]

[dependencies.imxrt-ral]
version = "0.6"
features = ["imxrt1011"]

[dependencies.imxrt-rt]
version = "0.1.5"


[dependencies.cortex-m]
version = "0.7"
features = ["critical-section-single-core"]

[dependencies.imxrt1010evk-fcb]
version = "0.1"